# clinical_imaging_tools

./: .gitignore  LICENSE  README.md  pyproject.toml
data/dicom/: MR.1.2.246.352.221.46143004376852813134301961390876485803.dcm  MR.1.2.246.352.221.4621063047905191202691661742037890182.dcm  MR.1.2.246.352.221.462450701736744205016277432281183609246.dcm  MR.1.2.246.352.221.46297015904340189044141217763381418905.dcm  MR.1.2.246.352.221.46302418903211096267121676894464665267.dcm  MR.1.2.246.352.221.46340985649020190815336545634186719930.dcm  MR.1.2.246.352.221.46362783886722895682180439798989603972.dcm  MR.1.2.246.352.221.463783650467046098016227961990833666436.dcm  MR.1.2.246.352.221.46439006283376493935851499380450097066.dcm  MR.1.2.246.352.221.4644463200888895647880594315348225674.dcm  MR.1.2.246.352.221.46481555384107578011514919160378612355.dcm  MR.1.2.246.352.221.46569017883557972853971470693537798823.dcm  MR.1.2.246.352.221.46610297499567687196592583109429057944.dcm  MR.1.2.246.352.221.46620217304493734562111362943041802116.dcm  MR.1.2.246.352.221.467164805038492957816710728990450920620.dcm  MR.1.2.246.352.221.46725775092567707683065386545204763320.dcm  MR.1.2.246.352.221.467393107921322894010799338346168428955.dcm  MR.1.2.246.352.221.467446658905937629615819452545137589437.dcm  MR.1.2.246.352.221.46754414700172621866031798993608304813.dcm  MR.1.2.246.352.221.467668817539852676915030769750282407303.dcm  (+257 more)
examples/: 01-load_DICOM .ipynb  01-load_DICOM.ipynb  02-load_NIFTI.ipynb  03-DICOM2NIFTI.ipynb  04-segmentaion.ipynb
