[project]
name = "medical_imaging_tools"
version = "0.1.0"
description = "General tools for medical imaging"
readme = "README.md"
authors = [
    { name = "Nazanin Donyapour", email = "nazanin.donyapour@axleinfo.com" }
]
dependencies = [
    "matplotlib>=3.10.1",
    "nibabel>=5.3.2",
    "pip>=25.0.1",
    "pydicom>=3.0.1",
    "totalsegmentator>=2.8.0",
    "vedo>=2025.5.3",
]
